--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -5,7 +5,9 @@ html, body {
 }
 
 .header{
-    background-image: linear-gradient(to top , rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.5));
+    /*color: #FF3E3E;*/
+    background-color: #FF3E3E;
+    /*background-image: linear-gradient(to top , rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.5));*/
     max-height: 15%;
 }
 
@@ -14,13 +16,14 @@ html, body {
 }
 
 .footer{
-    background-image: linear-gradient(to bottom , rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.35));
+    /*background-image: linear-gradient(to bottom , rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.35));*/
+    background-color: #FF3E3E;
     position:fixed;
     right: 0;
     bottom: 0;
     left: 0;
     padding: 1rem;
-    max-height: 15%;
+    max-height: 8%;
 }
 
 .footerText{
@@ -28,7 +31,7 @@ html, body {
 
     font-family: "Calibri";
     font-weight: lighter;
-    color: #ffffff;
+    color: #000000;
     font-size: 18px;
 
     margin-top: 3%;
@@ -40,7 +43,7 @@ html, body {
     text-decoration: none;
     font-family: "Calibri";
     font-weight: lighter;
-    color: #ffffff;
+    color: #000000;
     font-size: 18px;
 }
 
@@ -55,7 +58,7 @@ html, body {
     text-decoration: none;
     font-family: "Calibri";
     font-weight: lighter;
-    color: #ffffff;
+    color: #FFC300;
     font-size: 25px;
 }
 
