--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -22,7 +22,7 @@ html, body {
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 1rem;
+    /*padding: 1rem;*/
     max-height: 8%;
 }
 
@@ -34,7 +34,7 @@ html, body {
     color: #000000;
     font-size: 18px;
 
-    margin-top: 3%;
+    margin-top: 1.5%;
 }
 
 .footerLink{
